--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "echarts": "^5.1.1",
     "element-plus": "^1.0.2-beta.44",
     "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
